# otus_cpp

.github/workflows/: release-helloworld.yml
task_1_cpp_builder/: CMakeLists.txt
task_1_cpp_builder/lib_version/: CMakeLists.txt
task_1_cpp_builder/lib_version/include/: version.hpp
task_1_cpp_builder/lib_version/src/: test_version.cpp  version.cpp  version_consts.hpp.in
task_1_cpp_builder/src/: main.cpp
